# mate-tweak

./: Makefile.am  README.md  ___disabled___remove___old_setup.py  autogen.sh  configure.ac  makepot  marco-wrapper  marco-xr_glx_hybrid  mate-tweak  mate-tweak.in.in  mate-tweak.pot  meson.build  post_install.py  post_uninstall.sh
MateTweak/: MainWindow.py  Makefile.am  config.py.in  meson.build
data/: Makefile.am  marco-picom.1  marco-picom.desktop  marco-xr_glx_hybrid.desktop  mate-tweak.ui  meson.build  org.mate.mate-tweak.policy.in
po/: LINGUAS  Makevars  POTFILES.in  POTFILES.skip  af.po  am.po  an.po  ar.po  ar_SA.po  as.po  ast.po  az.po  be.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  cmn.po  crh.po  cs.po  csb.po  cv.po  cy.po  da.po  de.po  de_CH.po  dz.po  el.po  en.po  en_AU.po  en_BR.po  en_CA.po  en_DE.po  en_GB.po  en_US.po  eo.po  es.po  (+139 more)
util/: mate-tweak-helper  meson.build
